2007-06-25  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi: Fix freetype installation problem

2007-06-24  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi: Check for python22.dll before enabling
	the Python plug-in component; Use GTK *.mo files from share instead
	of lib (gladewin32 compatibility; use freetype6.dll instead of
	libfreetype-6.dll (agreed common dll name for win32)
	* lib/libdia.def: exporting text_get_ascent, required by custom object,
	exporting dia_font_set_slant, dia_font_set_weight, required by vdx
	plug-in 

2007-06-20  Lars Clausen  <lars@raeder.dk>

	* app/disp_callbacks.c: Patch from Patrick Hallinan
	<patrick.j.hallinan@gmail.com>: Fix right/middle button
	functionality. 

2007-06-13  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi: Workaround previous theme bug; properly use
	Windows installer theme
	* doc/en/dia.dbk: Applied patch from Peter Breitenlohner < peb@mppmu.mpg.de>
	typo in manpage; fixes bug #340992
	
2007-06-10  Steffen Macke <sdteffen@gmail.com>

	* sheets/SISSI.sheet.in: Translating texts from French to English
	* objects/sissi/site.c:
	* objects/sissi/area.c:
	* objects/sissi/room.c:
	* objects/sissi/sissi_object.c: Translated confidentiality from French to
	English; partial fix for bug #355995
	* installer/win32/dia.nsi: Added SISSI files, ui files
	* app/app_procs.c: #include commands.h
	* app/commands.c: #include interface.h
	* app/interface.c: Declare variables first to make MSVC happy
	
2007-06-07  Lars Clausen  <lars@raeder.dk>

	* app/commands.c
	* app/display.c
	* app/commands.h
	* app/app_procs.c
	* app/interface.c
	* app/interface.h
	* app/disp_callbacks.c
	* app/menus.c
	* app/menus.h
	* lib/diainteractiverenderer.c
	* data/integrated-ui.xml: Patch from Patrick Hallinan
	<patrick.j.hallinan@gmail.com>: More work on integrated UI:
	Toolbar visibility, right-mouse menu.

2007-06-05  Jakub Friedl  <jfriedl@suse.cz>
