@@ -1,3 +1,13 @@
+2007-06-29  Lars Clausen  <lars@raeder.dk>
+
+	* app/interface.c: Patch from Patrick Hallinan
+	<patrick.j.hallinan@gmail.com>: Fix lack of initial update of new
+	diagram. 
+
+	* app/load_save.c: Patch from Hans de Goede
+	<j.w.r.degoede@hhs.nl>: Avoid having to remove -c89 option by
+	including proper header.
+
 2007-06-25  Steffen Macke <sdteffen@gmail.com>
 
 	* installer/win32/dia.nsi: Fix freetype installation problem
